force-app/main/default/objects/FleetDataImportFieldMapping__mdt/FleetDataImportFieldMapping__mdt.object-meta.xml
<CustomObject>
    <label>Fleet Data Import Field Mapping</label>
    <pluralLabel>Fleet Data Import Field Mappingds</pluralLabel>
</CustomObject>