force-app/main/default/objects/FleetDataImportFieldMapping__mdt/fields/ColumnName__c.field-meta.xml
<CustomField>
    <fullName>ColumnName__c</fullName>
    <label>Column Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>