force-app/main/default/objects/FleetDataImportFieldMapping__mdt/fields/LookupTarget__c.field-meta.xml
<CustomField>
    <fullName>LookupTarget__c</fullName>
    <label>Lookup Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>