force-app/main/default/objects/FleetDataImportFieldMapping__mdt/fields/StrategyMappingMetadataName__c.field-meta.xml
<CustomField>
    <fullName>StrategyMappingMetadataName__c</fullName>
    <label>Strategy Mapping Metadata Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>